--- a/BiebCWebsite/Views/Home/Index.cshtml
+++ b/BiebCWebsite/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome to The bieb</h1>
-    <p>Learn about Maarten Smith, Stephen Rass here:</a>.</p>
+    <p>Learn about Maarten Smith, Stephen Rass here:</p>
 </div>
