new routing added

--- a/BiebCWebsite/Views/Shared/_Layout.cshtml
+++ b/BiebCWebsite/Views/Shared/_Layout.cshtml
@@ -27,13 +27,10 @@
                         </li>
                         <!-- school routing -->
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Student">Student</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Bieb">Bieb</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Teacher">Teacher</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Course">Course</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Log">Log</a>
                         </li>
                     </ul>
                 </div>
