layout aan gepast naar test omgeving alle login mogelijkheden om dit te testen ... ja met crud

--- a/BiebCWebsite/Views/Shared/_Layout.cshtml
+++ b/BiebCWebsite/Views/Shared/_Layout.cshtml
@@ -23,14 +23,14 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="GuestModels" asp-action="Index">Guest</a>
                         </li>
                         <!-- school routing -->
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Bieb">Bieb</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="EmployeeModels" asp-action="Index">Employee</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Log">Log</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="AdminModels" asp-action="Index">Admin</a>
                         </li>
                     </ul>
                 </div>
