all rounting is done and working

--- a/BiebCWebsite/Views/Shared/_Layout.cshtml
+++ b/BiebCWebsite/Views/Shared/_Layout.cshtml
@@ -23,14 +23,17 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="GuestModels" asp-action="Index">Guest</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="AdminModels" asp-action="Index">AdminModels</a>
                         </li>
                         <!-- school routing -->
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="EmployeeModels" asp-action="Index">Employee</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="EmployeeModels" asp-action="Index">EmployeeModels</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="AdminModels" asp-action="Index">Admin</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="GuestModels" asp-action="Index">GuestModels</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="LoginModels" asp-action="Index">Login</a>
                         </li>
                     </ul>
                 </div>
