--- a/BiebCWebsite/Views/Shared/_Layout.cshtml
+++ b/BiebCWebsite/Views/Shared/_Layout.cshtml
@@ -44,8 +44,12 @@
     </div>
 
     <footer class="border-top footer text-muted">
+        @{
+            string name = "John Doe";
+        }
         <div class="container">
-            &copy; 2023 - BiebCWebsite - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - BiebCWebsite - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> 
+                @await Component.InvokeAsync("Greeting", new { name})
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
